--- a/frontend/src/feature/Navbar-Inventory/Styles/Navbar.css
+++ b/frontend/src/feature/Navbar-Inventory/Styles/Navbar.css
@@ -1,14 +1,8 @@
-.inventory-container {
-  font-family: "Inter", Arial, sans-serif;
-  background: #f5f7fa;
-  min-height: 100vh;
-}
-
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #394f5a;
+  background: #31434d;
   color: rgb(255, 255, 255);
   padding: 10px 20px;
 }
@@ -17,5 +11,5 @@
   text-align: center;
   margin-top: 15px;
   font-size: 0.9rem;
-  color: #555;
+  color: #e2e2e2;
 }
