--- a/frontend/src/feature/VehicelPage/Style/Tabs.css
+++ b/frontend/src/feature/VehicelPage/Style/Tabs.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #ffffff; /* Light background */
+  background-color: #1f2937; /* Light background */
   padding: 12px 16px;
-  border-bottom: 2px solid #d6d6d6;
+  border-bottom: 2px solid #475a70;
   flex-wrap: wrap;
   gap: 8px;
 }
@@ -20,9 +20,9 @@
   padding: 8px 16px;
   font-size: 14px;
   font-weight: 500;
-  color: #555;
-  background-color: rgb(255, 255, 255);
-  border: 1px solid #ddd;
+  color: #ffffff;
+  background-color: rgb(42, 59, 82);
+  border: 1px solid #708299;
   border-radius: 20px;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -32,13 +32,13 @@
 .tab-button.active {
   background: linear-gradient(
     145deg,
-    #95caff,
-    #d0e9ff
+    #389bff,
+    #3c4349
   ); /* Subtle gradient for a premium feel */
-  color: #007bff; /* Blue text to match the border */
-  border: 1px solid #007bff; /* Solid border */
+  color: #ff7b00; /* Blue text to match the border */
+  border: 1px solid #4b5f75; /* Solid border */
   border-radius: 8px; /* Slightly rounded corners */
-  box-shadow: 0 4px 12px rgba(0, 123, 255, 0.3); /* Stronger shadow for elevation */
+  box-shadow: 0 4px 12px rgba(46, 70, 97, 0.3); /* Stronger shadow for elevation */
   font-weight: bold; /* Emphasize the active state */
   padding: 10px 16px; /* Comfortable padding */
   cursor: pointer; /* Indicate interactivity */
@@ -47,8 +47,7 @@
 }
 
 .tab-button:hover {
-  background: linear-gradient(145deg, #f0f0f0, #e8e8e8);
-  color: #007bff; /* Add a slight blue tint to match active */
+  /* Add a slight blue tint to match active */
   box-shadow: 0 4px 10px rgba(0, 123, 255, 0.2); /* Add a blue glow */
 }
 
